# ElderWorld

./: .clangd  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.88B1CBECC33C1D4B.idx  player.cpp.D80FB3A346696425.idx  player.h.45BB2D8B620E0CEC.idx  win.cpp.3D9D357DA94A48E6.idx  win.h.9FBBE3D4527C6655.idx
ElderWood/: ElderWood.sln  ElderWood.vcxproj  ElderWood.vcxproj.filters  main.cpp  player.cpp  player.h  win.cpp  win.h
ElderWood/ElderWood/x64/Debug/: ElderWood.exe.recipe  ElderWood.ilk  ElderWood.vcxproj.FileListAbsolute.txt  vc143.idb
ElderWood/ElderWood/x64/Debug/ElderWood.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ElderWood.lastbuildstate  ElderWood.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
header/: player.h  win.h
scripts/: run.sh
src/: main.cpp  player.cpp  win.cpp
